# clifford

./: .gitignore  Cargo.toml  example.dot  graph.py  mwpm.py  requirements.txt
clifford/: simulator.py  simulator_chp.py
clifford/code/: rotated_surface_code.py
clifford/simulator/: simulator_chp.py
examples/: matching.rs  surface_code_benchmark.rs  surface_code_benchmark_equal.rs  surface_code_test.rs
src/: lib.rs  noise.rs  qec_code.rs  qubit_network.rs  simulator.rs
src/decoder/: mwpm.rs
src/noise/: noise_model.rs
src/qec_code/: rotated_surface_code.rs  stabilizer.rs
src/qubit_graph/: ungraph.rs
src/simulator/: chp_simulator.rs  chp_simulators.rs  core.rs  frame.rs
src/utils/: rand_xoshiro.rs
tests/: network_test.rs  simulator_test.rs  surface_code_test.rs  test_mwpm.rs  test_rotated_surface_code.py  test_simulator.py  test_simulator_chp.py  test_ungraph.rs
