[package]
name = "clifford"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
ndarray = "0.15"
rand = {version="0.8", default_features=false, features=["small_rng"]}
itertools = "0.10"